integrated sign in with firebase, included ability to store authenticated users into our firestore database, fixed overflow of logo container, finished sign in handle submit method, implemented redirection to homepage when user signs in, took out redirection from logo, so that a non signed in user cannot route to the homepage without being authenticated. Also now logo takes you to sign in page

--- a/emerge/src/components/header/header.styles.scss
+++ b/emerge/src/components/header/header.styles.scss
@@ -9,6 +9,7 @@
       height: 100%;
       width: 70px;
       padding: 25px;
+      overflow: hidden;
     }
 
     .logo {
@@ -16,7 +17,7 @@
       width: 70px;
       padding: 25px;
       object-fit: cover;
-      transform: scale(7,7);
+      transform: scale(6.1,6.1);
     }
   
     .options {
